# source-sdk-2013-cmake

./: .gitignore  CMakeLists.txt  README.md  createallprojects  creategameprojects
_cmake_scripts/: base.cmake  groups.cmake  msvc_base.cmake  posix_base.cmake  windows_base.cmake
mp/: CMakeLists.txt  creategameprojects.bat
mp/_cmake_scripts/: groups.cmake  msvc_base.cmake  pch_skip.cmake  platform_dirs.cmake  postbuild.cmake
mp/src/fgdlib/: fgdlib.cmake
mp/src/game/server/: nav_mesh.cmake
mp/src/mathlib/: mathlib.cmake
mp/src/public/: builddisp.cpp  xzp.cpp
mp/src/public/mathlib/: vector.h
mp/src/public/tier0/: memdbgon.h  platform.h
mp/src/tier1/: strtools.cpp  tier1.cmake
mp/src/utils/glview/: glview.cmake
mp/src/utils/motionmapper/: motionmapper.cmake
mp/src/utils/qc_eyes/: qc_eyes.cmake
mp/src/utils/serverplugin_sample/: serverplugin_empty.cmake
mp/src/utils/tgadiff/: tgadiff.cmake
mp/src/utils/vbsp/: textures.cpp
mp/src/utils/vrad/: vrad_dll.cmake
mp/src/utils/vvis/: vvis_dll.cmake
sp/: CMakeLists.txt  cmake-variants.yaml  createallprojects  createallprojects.bat  creategameprojects
sp/_cmake_scripts/: groups.cmake  video_base.cmake
sp/src/game/client/: c_baseentity.cpp  client_base.cmake  client_episodic.cmake  client_hl2.cmake  clientmode_shared.cpp  particlemgr.h
sp/src/game/server/: ai_behavior_lead.cpp  server_episodic.cmake  server_hl2.cmake
sp/src/materialsystem/stdshaders/: game_shader_dx9_episodic.cmake  game_shader_dx9_hl2.cmake
sp/src/public/mathlib/: vector.h
sp/src/public/tier0/: platform.h
sp/src/public/tier1/: utlstring.h
sp/src/public/vgui_controls/: Panel.h
sp/src/public/vstdlib/: pch_vstdlib.h
sp/src/raytrace/: raytrace.cmake
sp/src/tier1/: math_proxy.cpp  strtools.cpp  tier1.cmake
sp/src/utils/height2normal/: height2normal.cmake
sp/src/utils/vbsp/: vbsp.cmake
sp/src/utils/vice/: vice.cmake
sp/src/utils/vrad/: vrad_dll.cmake
sp/src/utils/vrad_launcher/: vrad_launcher.cmake
sp/src/utils/vtfdiff/: vtfdiff.cmake
sp/src/utils/vvis/: vvis_dll.cmake
sp/src/utils/vvis_launcher/: vvis_launcher.cmake
sp/src/vgui2/vgui_controls/: vgui_controls.cmake
src/game/client/: client_base.cmake  client_hl2mp.cmake  clientmode_shared.cpp
src/game/server/: ai_behavior_lead.cpp  server_base.cmake  server_hl2mp.cmake
src/materialsystem/stdshaders/: game_shader_dx9_base.cmake  game_shader_dx9_hl2mp.cmake
src/public/tier0/: memoverride.cpp
src/tier1/: tier1.cmake
src/utils/captioncompiler/: captioncompiler.cmake
src/utils/glview/: glview.cmake
src/utils/height2normal/: height2normal.cmake
src/utils/motionmapper/: motionmapper.cmake
src/utils/qc_eyes/: qc_eyes.cmake
src/utils/serverplugin_sample/: serverplugin_empty.cmake
src/utils/tgadiff/: tgadiff.cmake
src/utils/vbsp/: vbsp.cmake
src/utils/vice/: vice.cmake  vice.cpp
src/utils/vrad/: vrad_dll.cmake
src/utils/vrad_launcher/: vrad_launcher.cmake
src/utils/vtf2tga/: vtf2tga.cmake
src/utils/vtfdiff/: vtfdiff.cmake
src/utils/vvis/: vvis_dll.cmake
src/utils/vvis_launcher/: vvis_launcher.cmake
src/vgui2/vgui_controls/: vgui_controls.cmake
